# SGC-ISynKGR

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  IMPLEMENTATION_NOTES.md  LICENSE  Makefile  NEW_REPOSITORY_SETUP.md  README.md  docker-compose.yml  pyproject.toml
benchmark/: benchmark_full.json  config.json  evaluate.py  final_report.py  full_workflow.py  metrics.py  orchestrate.py  report.py  run.py  run_sut.py  sample_validate.py  scenarios.py  simple_llm_test.py  sut_contract.py  validate_dataset.py
benchmarks/: run.py
docs/: ARCHITECTURE.md  BASELINES.md  BENCHMARKS.md  DATASETS.md  EXTENDING.md  IEEE_READINESS.md  IMPLEMENTATION_DIAGNOSIS.md  MODEL_CONTRIBUTION.md  QUALITATIVE_EXAMPLES.md  SCENARIO_MATRIX.md  SEMANTIC_GRAPH_CALIBRATED.md  WHY_NOT_OTHERS.md
examples/: translate_aas_to_opcua.py  translate_opcua_to_aas.py
isynkgr/: __init__.py  cli.py  common.py  common_model.py  translator.py
scripts/: gen_samples.cmd  gen_samples.ps1  gen_samples.py  gen_samples.sh  run_bench.cmd  run_bench.ps1  run_bench.py  run_bench.sh
tests/: test_adapters.py  test_benchmark_canonical_framework.py  test_benchmark_data_gen_pipeline.py  test_benchmark_runner.py  test_benchmark_runner_refactor.py  test_benchmark_validity_guards.py  test_cardinality_contract.py  test_dataset_validation.py  test_duplicate_target_ambiguity.py  test_evaluate_dedup.py  test_evaluation_components.py  test_final_report_alignment.py  test_full_workflow.py  test_full_workflow_pairs.py  test_hybrid_framework_upgrade.py  test_integration_smoke.py  test_legacy_ollama_import.py  test_llm_ollama.py  (+11 more)
(+308 files in other folders)
